<resources>
    <string name="app_name">Roulez Futés</string>

    <string name="titreHome">Home</string>
    <string name="titreAide">Aide</string>
    <string name="titreSimulateur">Simulateur taux d\'alcolémie</string>
    <string name="titreUrgence">Appels Urgence</string>
    <string name="titreJeu">Désigne ton SAM</string>
    <string name="titreSecours">Consignes de Secours</string>

    <string name="texteBouton112">Urgences - 112</string>
    <string name="texteBouton18">Ambulance - 18</string>
    <string name="texteBouton15">Samu - 15</string>
    <string name="texteBouton17">Police - 17</string>

    <string name="tvBiere">Bière</string>
    <string name="tvVin">Vin</string>
    <string name="tvShot">Shot</string>
    <string name="tvCocktail">Cocktail</string>
    <string name="tvTaille">Taille</string>
    <string name="tvMasse">Masse</string>
    <string name="rbHomme">Homme</string>
    <string name="rbFemme">Femme</string>
    <string name="tvSexe">Sexe</string>
    <string name="btnCalcule">Calcule</string>
    <string name="tvResultat">Résultat</string>
    <string name="titrePompette">Voyons si t\'es pompette</string>
    <string name="texteSousTitrePompette">Essaie de répondre aux questions</string>
    <string name="sousTitreJeu">Choisissez tous un numéro pour définir le SAM de ce soir</string>
    <string name="tvNbPersonnes">Nombre de personnes</string>
    <string name="btnDesigne">Désigne</string>
</resources>
