<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.joffrey.tmel.JeuActivity">

    <TextView
        android:id="@+id/tvTitreJeu"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:text="@string/sousTitreJeu"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        tools:layout_editor_absoluteX="8dp"
        android:layout_marginBottom="15sp"/>

    <TextView
        android:id="@+id/tvNbPersonnes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tvTitreJeu"
        android:textSize="@dimen/texteSizeTV"
        android:text="@string/tvNbPersonnes"/>

    <EditText
        android:id="@+id/etNbPersonnes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="number"
        android:layout_below="@+id/tvNbPersonnes"/>

    <Button
        android:id="@+id/btnDesigneClick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/btnDesigne"
        android:onClick="onBtnDesigneClick"
        android:textSize="@dimen/texteSizeTV"
        android:layout_below="@+id/etNbPersonnes"/>

    <TextView
        android:id="@+id/tvResult"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/btnDesigneClick"
        android:textSize="@dimen/texteSizeTV"/>

</RelativeLayout>
